k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-api

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auction-api

  template:
    metadata:
      labels:
        app: auction-api

    spec:
      containers:
        - name: django
          image: kenhm25/auction-api:latest
          imagePullPolicy: Always
          
          command:
            - sh
            - -c
            - |
              python manage.py migrate &&
              gunicorn auctionsite.wsgi:application --bind 0.0.0.0:8000

          ports:
            - containerPort: 8000
          
          readinessProbe:
            httpGet:
              path: /healthz/
              port: 8000
            initialDelaySeconds: 20
            timeoutSeconds: 5
            periodSeconds: 5
