k8s/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: auction-frontend

spec:
  replicas: 1

  selector:
    matchLabels:
      app: auction-frontend

  template:
    metadata:
      labels:
        app: auction-frontend

    spec:
      containers:
        - name: nginx
          image: kenhm25/auction-frontend:latest
          imagePullPolicy: Always

          ports:
            - containerPort: 80

          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 3
            periodSeconds: 10
            timeoutSeconds: 2
            failureThreshold: 3

          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 10
            periodSeconds: 20
            timeoutSeconds: 2
            failureThreshold: 3

          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 200m
              memory: 128Mi
