k8s/frontend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-frontend

spec:
  type: ClusterIP

  selector:
    app: auction-frontend

  ports:
    - port: 80
      targetPort: 80
