k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: auction-api

spec:
  type: ClusterIP

  selector:
    app: auction-api

  ports:
    - port: 80
      targetPort: 8000
