k8s/ingress.frontend-backend.suggested.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-ingress

spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auction-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auction-frontend
                port:
                  number: 80
