k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: auction-ingress
  annotations:
    kubernetes.io/ingress.class: "gce"
    kubernetes.io/ingress.global-static-ip-name: "auction-ip"
    networking.gke.io/managed-certificates: "auction-managed-cert"
    
spec:
  rules:
    - http:
        paths:
          - path: /api
            pathType: Prefix
            backend:
              service:
                name: auction-api
                port:
                  number: 80
          - path: /
            pathType: Prefix
            backend:
              service:
                name: auction-frontend
                port:
                  number: 80
